<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#112F5F"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About_Activity">


<ImageView
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:src="@mipmap/profile"
    android:layout_marginTop="15dp"
    android:layout_gravity="center_horizontal"
    android:contentDescription="@string/name"
    />





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/configured"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFEB3B"
        />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="5dp"
    android:text="@string/name"
    android:textSize="16sp"
    android:textColor="#FAE8E8"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:text="@string/dept"
        android:textSize="16sp"
        android:textColor="#FAE8E8"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:text="@string/mail"
        android:textSize="16sp"
        android:textColor="#FAE8E8"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:textSize="16sp"
        android:textColor="#FAE8E8"
        />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privecy"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:textSize="14sp"
        android:textColor="#E91E63"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacytext"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:textColor="#A8DAE0"
        />
</LinearLayout>