<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    tools:context=".Feedback">

    <EditText
        android:id="@+id/unameID"
        android:layout_margin="20dp"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/uname"
        android:inputType="text"

        />
    <EditText
        android:id="@+id/uFeedbckID"
        android:layout_margin="20dp"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/feedback"
        android:inputType="text"

        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="100dp"
    >
    <Button
        android:id="@+id/sendButttonID"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/send"
        android:background="#E4487E"
        android:textColor="#fff"
        />
    <Button
        android:id="@+id/clearbuttonID"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/clear"
        android:background="#E4487E"
        android:textColor="#fff"
        />
</LinearLayout>

</LinearLayout>